meeting controls chapter

--- a/src/content/docs/de/makingmeetings.mdx
+++ b/src/content/docs/de/makingmeetings.mdx
@@ -35,4 +35,4 @@ Meetings können im Namen des Organisators eingerichtet werden, der dann die Fol
 1. Geben Sie der Besprechung einen Titel.
 	1. Beachten Sie, dass dies nicht der Titel des Meetings in Ihrer Videokonferenzplattform sein muss.
 1. Sie werden gefragt, ob Sie die Bilder automatisch beschreiben lassen möchten.
-1. Wenn Sie auf "Fertig" klicken, erhalten Sie eine Nachricht, die Sie in Ihre Zwischenablage kopieren und an die für die Präsentation verantwortliche Person senden können. Sobald diese Person auf den Link klickt und die Folien hochlädt, kann sie entscheiden, ob die Folien heruntergeladen werden dürfen oder nicht.
+1. Sobald Sie auf "Fertig" klicken, erhalten Sie eine Nachricht, die Sie in Ihre Zwischenablage kopieren und an die für die Präsentation verantwortliche Person senden können. Sobald diese Person auf den Link klickt und die Folien hochlädt, kann sie entscheiden, ob die Folien heruntergeladen werden dürfen oder nicht.
