--- a/src/content/docs/es/gettingconnected.mdx
+++ b/src/content/docs/es/gettingconnected.mdx
@@ -2,27 +2,27 @@
 title: Conectarse
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for Meetings ofrece dos formas rápidas e indoloras de conectarse a su presentación de diapositivas accesible.
 
-El proceso de conexión de Remote Incident Manager está diseñado pensando en la rapidez y la sencillez, tanto para la persona que recibe la asistencia como para la que la proporciona.
-## Conexión a un controlador
-Cuando inicie Remote Incident Manager por primera vez, estará en modo objetivo por defecto. Esto significa que se conectará a una persona que ha establecido una sesión de asistencia remota para usted.  
-Aparecerá un cuadro de edición llamado "palabra clave" Introduce la palabra clave que te ha proporcionado la persona que te asiste y, a continuación, simplemente pulsa intro. Eso es todo, ¡estás conectado!
-## Aceptar una solicitud de conexión
-Si un técnico le presta asistencia de forma habitual, su máquina puede estar configurada para recibir una solicitud de conexión sin que ninguno de los dos tenga que introducir una palabra clave. RIM emitirá un sonido y anunciará que su técnico está intentando conectarse.  
-<Windows>Para aceptar la conexión, pulse **Windows+Shift+Y** y la sesión se iniciará momentáneamente.</Windows>
-<MacOS>Para aceptar la conexión, pulse **Opción+Mayús+Y** y la sesión comenzará momentáneamente.</MacOS>
-## Conexión a un objetivo
-El proceso para establecer la sesión es bastante similar. En lugar de introducir la palabra clave, deberá navegar hasta el botón "Proporcionar ayuda en su lugar". Al hacer esto por primera vez, se le pedirá que configure una cuenta.
-1. Introduzca su dirección de correo electrónico.
-1. Busca en tu correo electrónico un código de verificación e introdúcelo en RIM.
-1. A continuación, se te pedirá que introduzcas tu nombre, ubicación y número de teléfono.
-1. Por último, recibirás otro código de verificación en tu teléfono. Introduce este código en RIM.
-    1. Si no dispone de un teléfono móvil capaz de recibir mensajes de texto, rellene este formulario. Le ayudaremos a verificar su cuenta.
-    1. Nota para los números internacionales: Si no recibes el código de verificación, asegúrate de que el código de país que precede a tu número lleva el signo más, en lugar de 00.
+## Conectarse a través de un enlace directo
 
-Ahora que ya has iniciado sesión, introduce la palabra clave que utilizará el objetivo para conectarse contigo. Cuando pases el cuadro de edición, encontrarás una casilla de verificación que determina si se inicia o no una conversación de voz durante la sesión (esto también puede activarse o desactivarse durante la sesión). A continuación, encontrarás el botón "Iniciar". Cuando lo pulses, estarás en la sala de espera hasta que tu objetivo se conecte. En este punto, querrás enviar la palabra clave que acabas de introducir a la persona con la que te conectarás, ya que es lo que usará para conectarse. Una vez que se hayan conectado, recibirás una alerta informándote de que la sesión remota está a punto de comenzar.  
-<Windows>Ten en cuenta el atajo mencionado **Windows+Mayús+Retroceso**, ya que abrirá el menú RIM en tu máquina. Si dependes exclusivamente del teclado, ésta es la única forma de dirigir la entrada del teclado a tu propio sistema.</Windows>
-<MacOS>Toma nota del atajo de teclado mencionado **Opción+Mayús+Retroceso**, ya que abrirá el menú RIM en tu máquina. Si dependes exclusivamente del teclado, ésta es la única forma de dirigir la entrada del teclado a tu propio sistema.</MacOS>
-Después de cerrar este diálogo, se iniciará la sesión remota.
+De forma similar a un enlace de reunión de su plataforma de teleconferencia, Scribe for Meetings ofrece enlaces directos para unirse a su presentación de diapositivas accesible. Si recibe uno en su invitación a la reunión o en el chat de la reunión, puede hacer clic en él para abrir al instante Scribe for Meetings en su navegador web. Una vez que haga clic en el botón "Iniciar", puede ocurrir una de estas dos cosas.
+1. Oirá una breve campanada, seguida de un mensaje que le informará de que Scribe for Meetings se está preparando para proporcionar acceso al contenido de esta reunión.
+    1. Es normal que esto lleve hasta tres minutos, por lo que puede ser aconsejable que el presentador de la reunión inicialice Scribe for Meetings antes de presentar sus diapositivas.
+    1. Una vez que el robot Scribe se una a la reunión, recibirá una segunda señal sonora de alerta seguida de un mensaje que le informará de este hecho.
+1. Es posible que, en ocasiones, empiece a oír el anuncio del contenido de las diapositivas muy poco después de hacer clic en "Iniciar" Esto puede ocurrir si
+    1. Usted no es el primer participante que entra en la reunión con Scribe for Meetings.
+    1. Ha entrado tarde en la reunión.
+
+En cualquier caso, Scribe for Meetings ya está listo para empezar a presentar las diapositivas.
+
+## Unirse a través de un enlace de reunión
+
+Si por cualquier motivo no dispone del enlace directo, puede intentar unirse a través de un enlace directo de Zoom o Teams. Para unirse a través del enlace de reunión estándar:
+1. Visite Scribe for Meetings.
+1. Introduzca la URL de la reunión en el cuadro de edición.
+1. Al pulsar "Ir", sucederá una de estas dos cosas.
+    1. Si la reunión está registrada, aparecerá su página de bienvenida. Puede pulsar el botón "Iniciar" cuando la reunión esté lista.
+    1. Si la reunión no está registrada, aparecerá una página que le permitirá hacer lo siguiente:
+        1. Inscribirse para recibir una notificación por correo electrónico cuando la reunión esté registrada en Scribe for Meetings.
+        1. Registrar la reunión, ya sea como organizador o en nombre del organizador.
