--- a/src/content/docs/fr/gettingconnected.mdx
+++ b/src/content/docs/fr/gettingconnected.mdx
@@ -1,28 +1,28 @@
 ---
-title: Se connecter
+title: Se faire raccorder
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for Meetings offre deux moyens rapides et sans douleur de se connecter à votre présentation de diapositives accessibles.
 
-Le processus de connexion de Remote Incident Manager a été conçu dans un souci de rapidité et de simplicité, tant pour la personne qui reçoit de l'aide que pour celle qui la fournit.
-## Connexion à un contrôleur
-Lorsque vous lancez Remote Incident Manager pour la première fois, vous êtes par défaut en mode cible. Cela signifie que vous allez vous connecter à une personne qui a mis en place une session d'assistance à distance pour vous.  
-Vous arrivez dans une zone d'édition intitulée "mot-clé" Saisissez le mot-clé qui vous a été communiqué par la personne qui vous assiste, puis appuyez simplement sur la touche "Entrée". Et voilà, vous êtes connecté !
-## Accepter une demande de connexion
-Si un technicien vous assiste régulièrement, votre appareil peut être configuré pour recevoir une demande de connexion sans que vous ayez à saisir de mot-clé. RIM émettra un carillon, puis annoncera que votre technicien tente de se connecter.  
-<Windows>Pour accepter la connexion, appuyez sur **Windows+Shift+Y** et la session commencera momentanément.</Windows>
-<MacOS>Pour accepter la connexion, appuyez sur **Option+Shift+Y** et la session commencera momentanément.</MacOS>
-## Connexion à une cible
-La procédure d'établissement de la session est assez similaire. Plutôt que d'entrer le mot-clé, vous voudrez naviguer jusqu'au bouton "Provide help instead" (Fournir de l'aide à la place). Lorsque vous effectuez cette opération pour la première fois, il vous sera demandé de créer un compte.
-1. Saisissez votre adresse électronique.
-1. Vérifiez votre courrier électronique pour obtenir un code de vérification, puis saisissez-le dans RIM.
-1. Il vous sera ensuite demandé de saisir votre nom, votre lieu de résidence et votre numéro de téléphone.
-1. Enfin, vous recevrez un autre code de vérification sur votre téléphone. Entrez ce code dans RIM.
-    1. Si vous n'avez pas de téléphone portable capable de recevoir des messages textuels, veuillez remplir ce formulaire. Nous vous aiderons à faire vérifier votre compte.
-    1. Une remarque pour les numéros internationaux : Si votre code de vérification n'aboutit pas, assurez-vous que l'indicatif de pays précédant votre numéro est indiqué par le signe plus et non par 00.
+## Rejoindre via un lien direct
 
-Maintenant que vous êtes connecté, saisissez le mot-clé que la cible utilisera pour se connecter à vous. Lorsque vous dépassez la zone d'édition, vous tombez sur une case à cocher qui détermine si une conversation vocale doit être lancée ou non pendant la session (cette option peut également être activée ou désactivée pendant la session). Ensuite, vous trouverez le bouton "Démarrer". Lorsque vous cliquez sur ce bouton, vous vous retrouvez dans la salle d'attente jusqu'à ce que votre cible se connecte. À ce stade, vous voudrez envoyer le mot-clé que vous venez de saisir à la personne avec laquelle vous allez vous connecter, car c'est ce qu'elle utilisera pour se connecter. Une fois la connexion établie, vous recevrez une alerte vous informant que la session à distance est sur le point de commencer.  
-<Windows>Prenez note du raccourci **Windows+Shift+Backspace** mentionné, car il permet d'ouvrir le menu RIM sur votre machine. Si vous utilisez exclusivement le clavier, c'est le seul moyen de renvoyer les données saisies au clavier vers votre propre système.</Windows>
-<MacOS>Prenez note du raccourci **Option+Shift+Backspace** mentionné car il fera apparaître le menu RIM sur votre machine. Si vous utilisez exclusivement le clavier, c'est la seule façon de renvoyer l'entrée du clavier vers votre propre système.</MacOS>
-Une fois que vous avez quitté ce dialogue, la session à distance est lancée.
+À l'instar d'un lien de réunion provenant de votre plateforme de téléconférence, Scribe for Meetings propose des liens directs pour se connecter à votre présentation de diapositives accessibles. Si vous recevez un lien dans votre invitation à la réunion ou dans le chat de la réunion, vous pouvez cliquer dessus pour ouvrir instantanément Scribe for Meetings dans votre navigateur Web. Une fois que vous avez cliqué sur le bouton "Démarrer", l'une des deux choses suivantes peut se produire.
+1. Vous entendrez un petit carillon, suivi d'un message vous informant que Scribe for Meetings se prépare à fournir un accès au contenu de cette réunion.
+    1. Il est normal que cela prenne jusqu'à trois minutes, c'est pourquoi il est conseillé au présentateur de la réunion d'initialiser Scribe for Meetings avant de présenter ses diapositives.
+    1. Une fois que le robot Scribe aura rejoint la réunion, vous recevrez un deuxième carillon d'alerte suivi d'un message vous informant de ce fait.
+1. Vous pouvez parfois commencer à entendre l'annonce du contenu des diapositives très peu de temps après avoir cliqué sur "Démarrer" Cela peut se produire dans les cas suivants
+    1. Vous n'êtes pas le premier participant à entrer dans la réunion avec Scribe for Meetings.
+    1. Vous êtes entré tardivement dans la réunion.
+
+Quoi qu'il en soit, Scribe for Meetings est maintenant prêt à commencer la présentation des diapositives.
+
+## Rejoindre via le lien de la réunion
+
+Si, pour une raison quelconque, vous ne disposez pas du lien direct, vous pouvez toujours essayer de vous joindre à la réunion via un lien direct Zoom ou Teams. Pour participer via le lien de réunion standard :
+1. Visitez Scribe for Meetings.
+1. Saisissez l'URL de la réunion dans la zone d'édition.
+1. En appuyant sur "Go", l'une des deux choses suivantes se produira.
+    1. Si la réunion est enregistrée, la page de bienvenue s'affiche. Vous pouvez appuyer sur le bouton "Démarrer" lorsque la réunion est prête.
+    1. Si la réunion n'est pas enregistrée, une page s'affiche, qui vous permet d'effectuer les opérations suivantes :
+        1. S'inscrire pour être informé par courrier électronique lorsque la réunion est enregistrée sur Scribe for Meetings.
+        1. Enregistrer la réunion, en tant qu'organisateur ou au nom de l'organisateur.
