--- a/src/content/docs/fr/makingmeetings.mdx
+++ b/src/content/docs/fr/makingmeetings.mdx
@@ -33,6 +33,6 @@ Les réunions peuvent être organisées au nom de l'organisateur, qui pourra alo
 	1. Si vous n'êtes pas connecté, votre adresse électronique vous sera demandée, puis un lien de vérification vous sera envoyé par courrier électronique.
 	1. En cliquant sur ce lien, vous serez connecté, ce qui vous permettra de poursuivre le processus de création de la réunion.
 1. Donnez un titre à la réunion.
-	1. Notez qu'il ne doit pas nécessairement s'agir du titre de la réunion dans votre plate-forme de vidéoconférence.
+	1. Notez qu'il ne doit pas nécessairement s'agir du titre de la réunion dans votre plate-forme de visioconférence.
 1. Il vous sera demandé si vous souhaitez que les images soient automatiquement décrites.
 1. Une fois que vous aurez cliqué sur "Terminé", vous recevrez un message que vous pourrez copier dans votre presse-papiers et envoyer à la personne chargée de la présentation. Une fois qu'elle aura cliqué sur le lien et téléchargé les diapositives, elle pourra décider d'autoriser ou non le téléchargement des diapositives.
