--- a/src/content/docs/it/makingmeetings.mdx
+++ b/src/content/docs/it/makingmeetings.mdx
@@ -35,4 +35,4 @@ Le riunioni possono essere impostate a nome dell'organizzatore, che potrà quind
 1. Assegnare un titolo alla riunione.
 	1. Si noti che questo non deve essere il titolo della riunione nella piattaforma di videoconferenza.
 1. Verrà chiesto se si desidera che le immagini vengano descritte automaticamente.
-1. Una volta fatto clic su "Fatto", viene visualizzato un messaggio che può essere copiato negli appunti e inviato alla persona responsabile della presentazione. Una volta fatto clic sul link e caricate le diapositive, il responsabile potrà decidere se consentire o meno il download delle diapositive.
+1. Una volta fatto clic su "Fatto", verrà visualizzato un messaggio da copiare negli appunti e inviare alla persona responsabile della presentazione. Una volta fatto clic sul link e caricate le diapositive, il responsabile potrà decidere se consentire o meno il download delle diapositive.
