--- a/src/content/docs/pt/gettingconnected.mdx
+++ b/src/content/docs/pt/gettingconnected.mdx
@@ -1,28 +1,28 @@
 ---
-title: Como se conectar
+title: Obtendo conexão
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+O Scribe for Meetings oferece duas maneiras rápidas e fáceis de se conectar à sua apresentação de slides acessível.
 
-O processo de conexão do Remote Incident Manager foi projetado tendo em mente a velocidade e a simplicidade, tanto para a pessoa que recebe assistência quanto para a que a fornece.
-## Conectando-se a um controlador
-Ao iniciar o Remote Incident Manager pela primeira vez, você estará no modo de destino por padrão. Isso significa que você se conectará a uma pessoa que configurou uma sessão de suporte remoto para você.  
-Você chegará a uma caixa de edição chamada "palavra-chave" Digite a palavra-chave fornecida a você pela pessoa que o está ajudando e, em seguida, pressione Enter. Pronto, você está conectado!
-## Aceitando uma solicitação de conexão
-Se um técnico fornecer suporte a você regularmente, o seu equipamento poderá ser configurado para receber uma solicitação de conexão sem que nenhum de vocês precise digitar uma palavra-chave. A RIM tocará um sinal sonoro e anunciará que o técnico está tentando se conectar.  
-<Windows>Para aceitar a conexão, pressione **Windows+Shift+Y** e a sessão será iniciada momentaneamente.</Windows>
-<MacOS>Para aceitar a conexão, pressione **Option+Shift+Y** e a sessão será iniciada momentaneamente.</MacOS>
-## Conectando-se a um alvo
-O processo de configuração da sessão é bastante semelhante. Em vez de digitar a palavra-chave, você deverá navegar até o botão "Provide help instead" (Fornecer ajuda). Ao fazer isso pela primeira vez, você será solicitado a configurar uma conta.
-1. Digite seu endereço de e-mail.
-1. Verifique se há um código de verificação em seu e-mail e insira-o na RIM.
-1. Em seguida, será solicitado que você digite seu nome, local e número de telefone.
-1. Por fim, você receberá outro código de verificação em seu telefone. Digite esse código na RIM.
-    1. Se você não tiver um telefone celular capaz de receber mensagens de texto, preencha este formulário. Nós o ajudaremos a verificar sua conta.
-    1. Uma observação para números internacionais: Se o código de verificação não for recebido, verifique se o código do país antes do número é indicado pelo sinal de mais, em vez de 00.
+## Conexão via link direto
 
-Agora que você está conectado, digite a palavra-chave que o alvo usará para se conectar a você. Ao navegar além da caixa de edição, você encontrará uma caixa de seleção que determina se deve ou não iniciar uma conversa por voz durante a sessão (isso também pode ser ativado ou desativado durante a sessão). Depois disso, você encontrará o botão "Start" (Iniciar). Ao clicar nesse botão, você ficará na sala de espera até que o alvo se conecte. Nesse momento, você deverá enviar a palavra-chave que acabou de digitar para a pessoa com a qual se conectará, pois é isso que ela usará para se conectar. Depois que ela se conectar, você receberá um alerta informando que a sessão remota está prestes a começar.  
-<Windows>Observe o atalho **Windows+Shift+Backspace** mencionado, pois ele abrirá o menu RIM em seu computador. Se você depende exclusivamente do teclado, essa é a única maneira de direcionar a entrada do teclado de volta ao seu próprio sistema.</Windows>
-<MacOS>Observe o atalho **Option+Shift+Backspace** mencionado, pois ele abrirá o menu RIM em seu computador. Se você depende exclusivamente do teclado, essa é a única maneira de direcionar a entrada do teclado de volta para o seu próprio sistema.</MacOS>
-Depois que você encerrar essa caixa de diálogo, a sessão remota será iniciada.
+Semelhante a um link de reunião de sua plataforma de teleconferência, o Scribe for Meetings oferece links diretos para participar de sua apresentação de slides acessível. Se você receber um link em seu convite de reunião ou no bate-papo da reunião, poderá clicar nele para abrir instantaneamente o Scribe for Meetings em seu navegador da Web. Quando você clicar no botão "Iniciar", uma das duas coisas poderá acontecer.
+1. Você ouvirá um breve sinal sonoro, seguido de uma mensagem informando que o Scribe for Meetings está se preparando para fornecer acesso ao conteúdo desta reunião.
+    1. É normal que isso demore até três minutos, por isso é aconselhável que o apresentador da reunião inicialize o Scribe for Meetings antes de apresentar seus slides.
+    1. Assim que o Scribe Bot entrar na reunião, você receberá um segundo sinal sonoro de alerta seguido de uma mensagem que o alertará sobre esse fato.
+1. Às vezes, você pode começar a ouvir o conteúdo do slide sendo anunciado logo após clicar em "Iniciar" Isso pode acontecer se:
+    1. Você não for o primeiro participante a entrar na reunião com o Scribe for Meetings.
+    1. Você entrou tarde em uma reunião.
+
+De qualquer forma, o Scribe for Meetings está pronto para começar a apresentar os slides.
+
+## Como entrar via link de reunião
+
+Se, por algum motivo, você não tiver o link direto, ainda poderá tentar ingressar por meio de um link direto do Zoom ou do Teams. Para ingressar por meio do link de reunião padrão:
+1. Visite o Scribe for Meetings.
+1. Digite o URL da reunião na caixa de edição.
+1. Ao pressionar "Go" (Ir), uma das duas coisas acontecerá.
+    1. Se a reunião estiver registrada, você verá a página de boas-vindas. Você pode pressionar o botão "Start" (Iniciar) quando a reunião estiver pronta.
+    1. Se a reunião não estiver registrada, você verá uma página que lhe permitirá fazer o seguinte:
+        1. Inscreva-se para ser notificado por e-mail quando a reunião for registrada no Scribe for Meetings.
+        1. Registrar a reunião, seja como organizador ou em nome do organizador.
