--- a/src/content/docs/pt/makingmeetings.mdx
+++ b/src/content/docs/pt/makingmeetings.mdx
@@ -33,6 +33,6 @@ As reuniões podem ser configuradas em nome do organizador, que poderá fazer o 
 	1. Se você não estiver conectado, será solicitado seu endereço de e-mail e, nesse momento, você receberá um link de verificação por e-mail.
 	1. Ao clicar nesse link, você fará o login e continuará o processo de criação da reunião.
 1. Dê um título à reunião.
-	1. Observe que esse não precisa ser o título da reunião na sua plataforma de videoconferência.
-1. Será perguntado se você deseja que as imagens sejam descritas automaticamente.
-1. Depois de clicar em "Concluído", você receberá uma mensagem que poderá copiar para a área de transferência e enviar para a pessoa responsável pela apresentação. Depois que a pessoa clicar no link e carregar os slides, ela poderá decidir se deseja ou não permitir o download dos slides.
+	1. Observe que esse não precisa ser o título da reunião em sua plataforma de videoconferência.
+1. Você será perguntado se deseja que as imagens sejam descritas automaticamente.
+1. Depois de clicar em "Concluído", você receberá uma mensagem que poderá copiar para a área de transferência e enviar para a pessoa responsável pela apresentação. Depois que a pessoa clicar no link e carregar os slides, ela poderá decidir se deseja ou não permitir que os slides sejam baixados.
