--- a/src/content/docs/sv/gettingconnected.mdx
+++ b/src/content/docs/sv/gettingconnected.mdx
@@ -1,28 +1,28 @@
 ---
-title: Att bli ansluten
+title: Att bli konvektionerad
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for Meetings erbjuder två snabba, smärtfria sätt att ansluta till din tillgängliga bildpresentation.
 
-Remote Incident Managers anslutningsprocess är utformad med snabbhet och enkelhet i åtanke, både för den som får hjälp och för den som tillhandahåller den.
-## Ansluta till en styrenhet
-När du först startar Remote Incident Manager kommer du som standard att vara i målläge. Det innebär att du kommer att ansluta till en person som har skapat en fjärrsupportsession för dig.  
-Du kommer att hamna i en redigeringsruta märkt "nyckelord" Ange det nyckelord som du får av personen som hjälper dig och tryck sedan bara på enter. Det var det, du är ansluten!
-## Acceptera en begäran om att ansluta
-Om en tekniker ger dig support regelbundet kan din maskin vara inställd på att ta emot en begäran om att ansluta utan att någon av er behöver ange ett nyckelord. RIM spelar upp en ljudsignal och meddelar sedan att din tekniker försöker ansluta.  
-<Windows>För att acceptera anslutningen, tryck **Windows+Shift+Y** och sessionen kommer att påbörjas inom en kort stund.</Windows>
-<MacOS>Om du vill acceptera anslutningen trycker du på **Option+Shift+Y** och sessionen startar omedelbart.</MacOS>
-## Ansluta till ett mål
-Processen för att konfigurera sessionen är ganska likartad. Istället för att ange nyckelordet kommer du att vilja navigera till knappen "Ge hjälp istället". När du gör detta för första gången kommer du att bli ombedd att skapa ett konto.
-1. Ange din e-postadress.
-1. Kontrollera din e-post för en verifieringskod och ange den sedan i RIM.
-1. Du kommer sedan att bli ombedd att ange ditt namn, din plats och ditt telefonnummer.
-1. Slutligen kommer du att få en annan verifieringskod på din telefon. Ange denna kod i RIM.
-    1. Om du inte har en mobiltelefon som kan ta emot textmeddelanden, vänligen fyll i detta formulär. Vi hjälper dig att få ditt konto verifierat.
-    1. En anmärkning för internationella nummer: Om din verifieringskod inte kommer fram, kontrollera att landskoden före ditt nummer anges med plustecknet, snarare än 00.
+## Ansluta via direktlänk
 
-Nu när du är inloggad anger du det nyckelord som målet kommer att använda för att ansluta till dig. När du navigerar förbi redigeringsrutan kommer du att stöta på en kryssruta som avgör om en röstkonversation ska startas under sessionen eller inte (detta kan också växlas till eller från under sessionen). Efter det hittar du knappen "Start". När du klickar på denna kommer du att befinna dig i väntrummet tills ditt mål ansluter. Vid denna tidpunkt vill du skicka nyckelordet du just angav till den person du kommer att ansluta till, eftersom det är vad de kommer att använda för att ansluta. När de har anslutit kommer du att få en varning som informerar dig om att fjärrsessionen är på väg att börja.  
-<Windows>Notera den nämnda **Windows+Shift+Backspace** genvägen eftersom det kommer att ta upp RIM-menyn på din maskin. Om du uteslutande använder tangentbordet är detta det enda sättet att dirigera tangentbordsinmatningar tillbaka till ditt eget system.</Windows>
-<MacOS>Notera den nämnda genvägen **Option+Shift+Backspace** eftersom den kommer att öppna RIM-menyn på din dator. Om du uteslutande använder tangentbordet är detta det enda sättet att dirigera tangentbordsinmatning tillbaka till ditt eget system.</MacOS>
-När du har avfärdat denna dialog kommer fjärrsessionen att initieras.
+I likhet med en möteslänk från din telekonferensplattform erbjuder Scribe for Meetings direktlänkar för att ansluta till ditt tillgängliga bildspel. Om du får en länk i din mötesinbjudan eller i möteschatten kan du klicka på den för att direkt öppna Scribe for Meetings i din webbläsare. När du klickar på knappen "Starta" kan en av två saker hända.
+1. Du kommer att höra en kort ljudsignal, följt av ett meddelande som informerar dig om att Scribe för möten förbereder sig för att ge tillgång till innehållet i detta möte.
+    1. Det är normalt att detta tar upp till tre minuter, varför det kan vara tillrådligt för mötespresentatören att initiera Scribe for Meetings innan de presenterar sina bilder.
+    1. När Scribe Bot ansluter till mötet kommer du att få en andra varningssignal följt av ett meddelande som informerar dig om detta.
+1. Ibland kan du börja höra bilderna presenteras mycket kort efter att du klickat på "Starta" Detta kan hända om:
+    1. Du är inte den första deltagaren som går in i mötet med Scribe for Meetings.
+    1. Du gick in i ett möte sent.
+
+I vilket fall som helst är Scribe for Meetings nu redo att börja presentera bilderna.
+
+## Anslutning via möteslänk
+
+Om du av någon anledning inte har den direkta länken kan du fortfarande försöka gå med via en direkt Zoom- eller Teams-länk. För att gå med via standardmöteslänken:
+1. Besök Scribe for Meetings.
+1. Ange mötets URL i redigeringsrutan.
+1. När du trycker på "Go" kommer en av två saker att hända.
+    1. Om mötet är registrerat kommer du att få se dess välkomstsida. Du kan trycka på knappen "Starta" när mötet är klart.
+    1. Om mötet inte är registrerat kommer du till en sida där du kan göra följande:
+        1. Registrera dig för att få ett e-postmeddelande när mötet är registrerat i Scribe for Meetings.
+        1. Registrera mötet, antingen som arrangör eller för arrangörens räkning.
