--- a/src/content/docs/sv/makingmeetings.mdx
+++ b/src/content/docs/sv/makingmeetings.mdx
@@ -33,6 +33,6 @@ Möten kan skapas på uppdrag av arrangören, som då kommer att kunna ladda upp
 	1. Om du inte är inloggad kommer du att bli ombedd att ange din e-postadress, varefter du kommer att få en verifieringslänk skickad till dig.
 	1. Om du klickar på den här länken loggar du in och kan fortsätta skapa mötet.
 1. Ge mötet en titel.
-	1. Observera att detta inte behöver vara titeln på mötet i din videokonferensplattform.
+	1. Observera att detta inte behöver vara samma titel som mötet har i din videokonferensplattform.
 1. Du kommer att bli tillfrågad om du vill att bilder ska beskrivas automatiskt.
 1. När du klickar på "Klar" får du ett meddelande som du kan kopiera till urklipp och skicka till den person som ansvarar för presentationen. När de klickar på länken och laddar upp bilderna kan de bestämma om bilderna ska kunna laddas ner eller inte.
