--- a/src/content/docs/de/gettingconnected.mdx
+++ b/src/content/docs/de/gettingconnected.mdx
@@ -1,28 +1,28 @@
 ---
-title: Verbunden werden
+title: Konkret werden
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for Meetings bietet zwei schnelle, mühelose Möglichkeiten, eine Verbindung zu Ihrer barrierefreien Folienpräsentation herzustellen.
 
-Der Verbindungsprozess des Remote Incident Managers wurde mit Blick auf Schnelligkeit und Einfachheit entwickelt, sowohl für die Person, die Hilfe erhält, als auch für die Person, die Hilfe leistet.
-## Verbindung mit einem Controller herstellen
-Wenn Sie Remote Incident Manager zum ersten Mal starten, befinden Sie sich standardmäßig im Zielmodus. Das bedeutet, dass Sie eine Verbindung zu einer Person herstellen, die eine Fernwartungssitzung für Sie eingerichtet hat.  
-Sie landen in einem Eingabefeld mit der Bezeichnung "Schlüsselwort" Geben Sie das Schlüsselwort ein, das Sie von der Person, die Sie unterstützt, erhalten haben, und drücken Sie dann einfach die Eingabetaste. Das war's, Sie sind verbunden!
-## Annahme einer Verbindungsanfrage
-Wenn Sie regelmäßig von einem Techniker unterstützt werden, kann Ihr Gerät so eingestellt sein, dass es eine Verbindungsanforderung annimmt, ohne dass Sie ein Schlüsselwort eingeben müssen. RIM gibt einen Signalton aus und meldet dann, dass Ihr Techniker versucht, eine Verbindung herzustellen.  
-<Windows>Um die Verbindung zu akzeptieren, drücken Sie **Windows+Umschalt+Y**, und die Sitzung wird kurzzeitig gestartet.</Windows>
-<MacOS>Um die Verbindung zu akzeptieren, drücken Sie **Option+Umschalt+Y**, und die Sitzung wird kurzzeitig gestartet.</MacOS>
-## Verbindung mit einem Ziel herstellen
-Das Verfahren zum Aufbau der Sitzung ist ziemlich ähnlich. Anstatt das Schlüsselwort einzugeben, sollten Sie auf die Schaltfläche "Stattdessen Hilfe bereitstellen" gehen. Wenn Sie dies zum ersten Mal tun, werden Sie aufgefordert, ein Konto einzurichten.
-1. Geben Sie Ihre E-Mail-Adresse ein.
-1. Überprüfen Sie Ihre E-Mail auf einen Verifizierungscode und geben Sie diesen dann in RIM ein.
-1. Sie werden dann aufgefordert, Ihren Namen, Ihren Standort und Ihre Telefonnummer einzugeben.
-1. Schließlich erhalten Sie einen weiteren Bestätigungscode auf Ihr Telefon. Geben Sie diesen Code bei RIM ein.
-    1. Wenn Sie kein Mobiltelefon haben, das Textnachrichten empfangen kann, füllen Sie bitte dieses Formular aus. Wir werden Ihnen helfen, Ihr Konto zu verifizieren.
-    1. Ein Hinweis für internationale Nummern: Wenn Ihr Verifizierungscode nicht ankommt, vergewissern Sie sich, dass die Landesvorwahl vor Ihrer Nummer mit einem Pluszeichen und nicht mit 00 gekennzeichnet ist.
+## Verbindung über direkten Link
 
-Wenn Sie nun angemeldet sind, geben Sie das Schlüsselwort ein, mit dem die Zielperson eine Verbindung zu Ihnen herstellen soll. Wenn Sie über das Bearbeitungsfeld hinausgehen, finden Sie ein Kontrollkästchen, mit dem Sie festlegen können, ob während der Sitzung ein Telefongespräch beginnen soll oder nicht (dies kann auch während der Sitzung ein- oder ausgeschaltet werden). Danach finden Sie die Schaltfläche "Start". Wenn Sie auf diese Schaltfläche klicken, befinden Sie sich im Warteraum, bis Ihr Ziel eine Verbindung herstellt. An diesem Punkt sollten Sie das soeben eingegebene Schlüsselwort an die Person senden, mit der Sie sich verbinden werden, da sie dieses Schlüsselwort zum Verbinden verwenden wird. Sobald die Person die Verbindung hergestellt hat, erhalten Sie eine Benachrichtigung, dass die Fernsitzung in Kürze beginnt.  
-<Windows>Achten Sie auf die erwähnte Tastenkombination **Windows+Umschalt+Rücktaste**, denn damit wird das RIM-Menü auf Ihrem Rechner aufgerufen. Wenn Sie sich ausschließlich auf die Tastatur verlassen, ist dies die einzige Möglichkeit, Tastatureingaben zurück auf Ihr eigenes System zu leiten.</Windows>
-<MacOS>Achten Sie auf die erwähnte Tastenkombination **Option+Umschalt+Rücktaste**, da diese das RIM-Menü auf Ihrem Rechner aufruft. Wenn Sie sich ausschließlich auf die Tastatur verlassen, ist dies die einzige Möglichkeit, die Tastatureingabe auf Ihr eigenes System zurückzuleiten.</MacOS>
-Nachdem Sie diesen Dialog beendet haben, wird die Remote-Sitzung gestartet.
+Ähnlich wie ein Meeting-Link von Ihrer Telefonkonferenz-Plattform bietet Scribe for Meetings direkte Links für den Beitritt zu Ihrer barrierefreien Folienpräsentation. Wenn Sie einen solchen Link in Ihrer Meeting-Einladung oder im Meeting-Chat erhalten, können Sie ihn anklicken, um Scribe for Meetings sofort in Ihrem Webbrowser zu öffnen. Sobald Sie auf die Schaltfläche "Starten" klicken, kann eines von zwei Dingen passieren.
+1. Sie hören einen kurzen Signalton, gefolgt von einer Nachricht, die Sie darüber informiert, dass Scribe for Meetings den Zugang zu den Inhalten in diesem Meeting vorbereitet.
+    1. Dies kann bis zu drei Minuten dauern, weshalb es ratsam sein kann, dass der Vortragende Scribe for Meetings initialisiert, bevor er seine Folien präsentiert.
+    1. Sobald der Scribe Bot der Besprechung beitritt, erhalten Sie einen zweiten Signalton, gefolgt von einer Nachricht, die Sie über diese Tatsache informiert.
+1. Es kann vorkommen, dass Sie die Ansage der Folieninhalte schon kurz nach dem Klicken auf "Start" hören Dies kann passieren, wenn:
+    1. Sie sind nicht der erste Teilnehmer, der das Meeting mit Scribe for Meetings betritt.
+    1. Sie sind zu spät in die Besprechung eingestiegen.
+
+In jedem Fall ist Scribe for Meetings jetzt bereit, mit der Präsentation der Folien zu beginnen.
+
+## Beitritt über Meeting Link
+
+Wenn Sie aus irgendeinem Grund nicht über den direkten Link verfügen, können Sie trotzdem versuchen, über einen direkten Zoom- oder Teams-Link beizutreten. Um über den Standard-Meeting-Link beizutreten:
+1. Besuchen Sie Scribe for Meetings.
+1. Geben Sie die Meeting-URL in das Bearbeitungsfeld ein.
+1. Wenn Sie auf "Go" klicken, geschieht eines von zwei Dingen.
+    1. Wenn die Besprechung registriert ist, wird Ihnen die Willkommensseite angezeigt. Sie können auf die Schaltfläche "Start" klicken, wenn das Meeting bereit ist.
+    1. Wenn die Besprechung nicht registriert ist, wird eine Seite angezeigt, auf der Sie Folgendes tun können:
+        1. Melden Sie sich an, um per E-Mail benachrichtigt zu werden, wenn die Besprechung bei Scribe for Meetings registriert ist.
+        1. Registrieren Sie die Veranstaltung, entweder als Organisator oder im Namen des Organisators.
