--- a/src/content/docs/en/meetingcontrols.mdx
+++ b/src/content/docs/en/meetingcontrols.mdx
@@ -28,7 +28,8 @@ Scribe for Meetings offers several ways to control the rendering. These clickabl
 
 Provided the organizer has allowed for slides to be downloaded, Scribe for Meetings offers downloads of the slides in several accessible formats. In order to download slides, follow the below procedure:
 1. while in a meeting, activate the "Download Slides" link.
-    1. You will be asked to log in.
+	1. If you are not logged in, you will be asked for your email address, at which point you will be emailed a verification link.
+	1. Clicking this link will log you in, thus continuing the meeting creation process.
 1. Choose the file format you would like your slides to be presented as. Your options include:
     * An accessible web page, with all of the same features as the live presentation, including read aloud
     * Tagged PDF
@@ -48,3 +49,23 @@ Provided the organizer has allowed for slides to be downloaded, Scribe for Meeti
 1. After you have customized any optional settings associated with your chosen formt, click the “Prepare Download” button.
 1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
 1. Clicking the link will instantly begin the download.
+
+## Keyboard Command Reference
+
+Most desktop browsers can take advantage of the keyboard commands associated with most Scribe For Meetings functions. Because these commands can vary depending on platform and browser, we will list all possible shortcuts below.
+
+*Note for macOS VoiceOver users*: If you are using the Chrome browser, your modifiers will be CTRL and Option. This will unfortunately cause a conflict with VoiceOver unless the passthrough command (CTRL+Option+Tab) is used before entering commands.
+
+Action | Windows | Chrome on macOS | Safari on macOS
+--- | --- | --- | ---
+Suspend Presentation | Alt+Shift+S | CTRL+Option+S | CTRL+S
+Go Live | Alt+Shift+L | CTRL+Option+L | CTRL+L
+Next Slide | Alt+Shift+N | CTRL+Option+N | CTRL+N
+Previous Slide | Alt+Shift+P | CTRL+Option+P | CTRL+P
+Read Aloud | Alt+Shift+R | CTRL+Option+R | CTRL+R
+Pause Reading Aloud | Alt+Shift+P | CTRL+Option+P | CTRL+P
+Continue Reading Aloud | Alt+Shift+C | CTRL+Option+C | CTRL+C
+Stop Reading Aloud | Alt+Shift+S | CTRL+Option+S | CTRL+S
+Go Backwards | Alt+Shift+B | CTRL+Option+B | CTRL+B
+Go Forwardds | Alt+Shift+N | CTRL+Option+N | CTRL+N
+
