--- a/src/content/docs/es/meetingcontrols.mdx
+++ b/src/content/docs/es/meetingcontrols.mdx
@@ -1,80 +1,71 @@
 ---
-title: The RIM Management Dashboard
+title: Controles de reunión
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Una vez dentro de la reunión, el contenido de las diapositivas se presentará sincronizado con la pantalla compartida del presentador. Cuando se presente una nueva diapositiva, ocurrirá lo siguiente:
+1. Escuchará un pitido.
+1. El contenido se presentará en pantalla y será leído por un lector de pantalla existente.
 
-RIM features a  web-based dashboard to facilitate various machine and account management tasks. You can manage your existing unattended computers, create preconfigured installers for target computers, and much more.  
-It should be noted that the feature set of the dashboard is largely dependent on which subscription tier your account is under. For example, enterprise users can assign machines to target groups, as well as create silent installers. On the other hand, anyone (including personal users) can create custom installers for their unattended machines.
+## Controles y funciones de la reunión
 
-## Locating the Dashboard
+Scribe for Meetings ofrece varias formas de controlar la representación. Estos botones en los que se puede hacer clic también tienen atajos de teclado fáciles de usar. Los controles incluyen:
+* Suspender presentación: Pausa la presentación en vivo, manteniendo su lugar en la diapositiva que se muestra actualmente.      
+    * Aunque las nuevas diapositivas no se anunciarán en tiempo real, no se las perderá, ya que Scribe for Meetings sigue observando silenciosamente la presentación en busca de actualizaciones.
+    * Cuando se suspende una presentación, este control se convierte en un botón "Ir en directo".
+* Diapositiva anterior: Va a la diapositiva anterior mostrada, si hay alguna disponible.
+    * Si no hay diapositiva anterior, este botón no aparecerá.
+    * Al pulsar este botón se suspenderá la presentación en directo.
+    * Tenga en cuenta que si asiste a una reunión y la presentación ya está en marcha, este botón no podrá llevarle de vuelta a la diapositiva 1.
+* Diapositiva siguiente: Va a la siguiente diapositiva, si hay alguna disponible.
+    * Si ya está viendo la última diapositiva, este botón no aparecerá.
+    * Al pulsar este botón se suspenderá la presentación en directo.
+* Leer en voz alta: Comienza a leer la diapositiva actualmente enfocada utilizando la voz de texto a voz del sistema.
+    * Al iniciar el modo de lectura en voz alta aparecerán controles de transporte adicionales (botones de rebobinado, reproducción/pausa y avance rápido), así como botones para ralentizar o acelerar el discurso.
+* Descargar diapositivas: Permite descargar las diapositivas en varios formatos diferentes.
+    * Esta opción sólo se muestra si el organizador ha permitido la descarga de las diapositivas.
 
-If you're a controller, the easiest way to get to the dashboard is through the main RIM interface. Clicking the RIM Dashboard button will automatically open the dashboard in your default browser, with the login already taken care of.  
-If you are a network administrator who does not have RIM installed, you can simply log into your account on the RIM website and your dashboard will appear.
+## Descarga de diapositivas
 
-## Managing Targets
+Siempre que el organizador haya permitido la descarga de las diapositivas, Scribe for Meetings ofrece la posibilidad de descargar las diapositivas en varios formatos accesibles. Para descargar las diapositivas, siga el procedimiento que se indica a continuación:
+1. estando en una reunión, active el enlace "Descargar diapositivas".
+	1. Si no ha iniciado sesión, se le pedirá su dirección de correo electrónico, tras lo cual se le enviará un enlace de verificación.
+	1. Al hacer clic en este enlace, iniciará la sesión y continuará con el proceso de creación de la reunión.
+1. Elija el formato de archivo en el que desea presentar sus diapositivas. Sus opciones incluyen:
+    * Una página web accesible, con todas las mismas características que la presentación en directo, incluida la lectura en voz alta
+    * PDF etiquetado
+        * Admite letra grande
+    * MP3, mediante texto a voz en una docena de idiomas
+        * Con esta conversión se ofrecen ajustes adicionales para la voz y la velocidad de habla.
+    * DAISY, texto más audio
+        * Con esta conversión se ofrecen ajustes adicionales para la voz y la velocidad del habla.
+    * EPUB
+    * Microsoft Word
+        * Admite letra grande
+    * Braille
+        * Grado 1 (EBAE)
+        * Grado 2 (EBAE)
+        * Braille inglés unificado (UEB)
+        * y muchos otros idiomas
+1. Una vez personalizados los ajustes opcionales asociados al formulario elegido, haga clic en el botón "Preparar descarga".
+1. Esté atento a su correo electrónico para recibir el enlace de descarga. Para la mayoría de los formatos, el correo electrónico llegará en unos minutos. La conversión a audio puede llevar mucho más tiempo, dependiendo de la longitud de la presentación de diapositivas, porque la síntesis de voz es un proceso que lleva más tiempo que otras conversiones.
+1. Al hacer clic en el enlace, se iniciará inmediatamente la descarga.
 
-When you click the "Configure Targets" link, you will arrive at a page that allows you to manage all the machines you have configured for unattended access. You can click on any one of these machines in order to manage it. Once inside, you will be able to:
-* Rename the target
-* Move the target to a different group (more on target groups later)
-* Delete the target
+## Referencia de comandos de teclado
 
-## Target Groups (for Pro Accounts and Above)
+La mayoría de los navegadores de escritorio pueden aprovechar los comandos de teclado asociados a la mayoría de las funciones de Scribe For Meetings. Dado que estos comandos pueden variar en función de la plataforma y el navegador, a continuación se enumeran todos los métodos abreviados posibles.
 
-Say for instance you're workgroup is spread out among several different locations. Or maybe you want to designate groups of machines to your routine maintenance techs. Target groups allow you to do just that. In order to do this, simply click the "Create Target Group" button, name your group, and submit.  
-You may have as many target groups as is needed for your use case. 
+*Nota para los usuarios de macOS VoiceOver*: Si utiliza el navegador Chrome, sus modificadores serán CTRL y Opción. Lamentablemente, esto provocará un conflicto con VoiceOver a menos que se utilice el comando passthrough (CTRL+Opción+Tab) antes de introducir los comandos.
 
-### Access Control (for Enterprise Organizations)
+Acción | Windows | Chrome en macOS | Safari en macOS
+--- | --- | --- | ---
+Suspender presentación | Alt+Mayús+S | CTRL+Opción+S | CTRL+S
+Ir a directo | Alt+Mayús+L | CTRL+Opción+L | CTRL+L
+Siguiente diapositiva | Alt+Mayús+N | CTRL+Opción+N | CTRL+N
+Diapositiva anterior | Alt+Mayús+P | CTRL+Opción+P | CTRL+P
+Leer en voz alta | Alt+Mayús+R | CTRL+Opción+R | CTRL+R
+Pausar la lectura en voz alta | Alt+Mayús+P | CTRL+Opción+P | CTRL+P
+Continuar leyendo en voz alta | Alt+Mayús+C | CTRL+Opción+C | CTRL+C
+Dejar de leer en voz alta | Alt+Mayús+S | CTRL+Opción+S | CTRL+S
+Retroceder | Alt+Mayús+B | CTRL+Opción+B | CTRL+B
+Ir hacia adelante | Alt+Mayús+N | CTRL+Opción+N | CTRL+N
 
-If your organizations assign a support technician to a specific set of machines, you probably want to ensure they only have access to that specific set. This is where the access control setting for target groups comes in.  
-When you click on a target group, you are given options to manage the machines in the group, as well as the group itself. The access control section is where you may grant access to this group on a per-account basis. Simply enter the email address of the account you wish to add, then click the "Give Access" button. Once this is done, you will be presented with a table of accounts that are given access to this group. Below each account is a "Revoke Access" button. This button does not require further confirmation.  
-It should be noted that all organization administrators are automatically granted access to manage any and all groups that are created under the organization.
-
-## Setting up a Preconfigured RIM Installer (Pro or above)
-
-One of the easiest ways to set up a machine for unattended or prompted connections is by creating a custom installer. This is incredibly useful if you are configuring mass deployments, or even as a simpler way to get RIM up and running on an end user's computer you plan on providing support for on the regular.
-
-IN order to do this:
-1. In the target management screen, click the "Build Target Installer" button.
-1. You will first be asked if you want this machine to be configured for fully unattended access, or for prompted access in which the user has to accept a prompt to initiate the connection.
-1. You will then be asked for a target group assignment. Note that the target group selection will automatically go to your chosen target group if you initiate the installer configuration from your group's page.
-1. You will be asked how long you want this installer to be valid for. It can be valid for anywhere between 7 to 30 days. Note that this timeframe only affects the functionality of the installation package. In other words, the machine's RIM configuration will not be disabled when the installation expires.
-1. You are then given the option to assign a bass name. Any machine provisioned via this installation package will have this base name assigned to it.
-1. You will then be presented with a checkbox that lets you opt into an email notification when a user installs RIM via this installer.
-1. If you are an enterprise admin, you will see a checkbox that allows you to build the installer as an MSI package. This option is useful for mass deployment of a custom installer to a machine cluster that will be designated to the given target group.
-1. You will be asked to provide an installer name, and optionally some notes. These are for internal records and will not appear within the created installer.
-1. Click on "Build Installer." You will be presented with the download link that you can either copy to the clipboard and send to your end user. Alternatively, you may download the installer directly for use in mass deployments.
-
-Now that you have your installer, it can be run in one of two ways. In either case, the machine will be added to your list of machines in both your account as well as the RIM client after the installer is complete.
-
-### Normal Execution
-
-The user will get a prompt when running the installer, containing the following information:
-* The technician's name along with their organization, if applicable
-* the nature of the connection, I.E whether a prompt is required or not
-
-The user can choose to either answer yes or no to the installation. Answering no will cancel the installation. After the installer finishes, the user will get a prompt informing them that their machine is now set up for remote access.
-
-### Silent Install (Enterprise Installers Only)
-
-A silent install can be initiated by running the executable installer with the */S* command line parameter. This is useful when installing RIM as part of a mass deployment routine.
-
-## Session History
-You can view your entire history of past sessions through the RIM dashboard. The session history currently contains the date and time of each session, the name of the computer you connected to, and the duration of the session. You may also choose to add comments to a session via the "Add Comment" link within the session row. This is useful for adding notes on the current status of an incident for your own sake as well as for the sake of organization administrators.
-
-## Managing your Subscription (Personal and Pro Plans)
-The dashboard allows you to easily view and manage your RIM subscription details. Upon clicking the "manage subscription" link, you can:
-* Upgrade your plan
-* Update your payment method
-* Cancel recurring payments
-
-### Upgrading your Plan
-
-You can easily upgrade your subscription. If you are on a monthly plan, you will be prorated the remaining charge from the new amount, with the full new amount being charged for subsequent months. Clicking "Upgrade Subscription" reveals a page nearly identical to the initial plan selection page. There are a few notable differences which we will outline below:
-* You cannot downgrade your plan to one with fewer machines. You can, however, upgrade from a monthly to a yearly plan with the same number of machines as your current plan. In order to downgrade, you would need to cancel your plan, wait for it to expire, then initiate a new plan with fewer machines.
-* Enterprise plans, including the enterprise addon, cannot be acquired directly through this page.
-
-### Canceling Recurring Payments
-
-When you click "Cancel Automatic Renewal," you will be asked for confirmation, after which your subscription will be set to expire at the end of the current term.
