--- a/src/content/docs/it/gettingconnected.mdx
+++ b/src/content/docs/it/gettingconnected.mdx
@@ -1,28 +1,28 @@
 ---
-title: Connettersi
+title: Connessione
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for Meetings offre due modi rapidi e indolori per collegarsi alla presentazione accessibile.
 
-Il processo di connessione di Remote Incident Manager è stato progettato all'insegna della velocità e della semplicità, sia per chi riceve assistenza sia per chi la fornisce.
-## Connessione a un controllore
-Quando si avvia Remote Incident Manager per la prima volta, la modalità predefinita è quella di destinazione. Ciò significa che vi connetterete a una persona che ha impostato una sessione di assistenza remota per voi.  
-Si aprirà una casella di modifica con l'etichetta "parola chiave" Inserite la parola chiave che vi è stata assegnata dalla persona che vi assiste e poi premete semplicemente invio. Il gioco è fatto, siete connessi!
-## Accettare una richiesta di connessione
-Se un tecnico fornisce assistenza regolarmente, il computer potrebbe essere impostato per ricevere una richiesta di connessione senza che sia necessario immettere una parola chiave. RIM emetterà un segnale acustico e annuncerà che il tecnico sta tentando di connettersi.  
-<Windows>Per accettare la connessione, premere **Windows+Shift+Y** e la sessione inizierà momentaneamente.</Windows>
-<MacOS>Per accettare la connessione, premere **Option+Shift+Y** e la sessione inizierà momentaneamente.</MacOS>
-## Connessione a un obiettivo
-Il processo di impostazione della sessione è abbastanza simile. Invece di inserire la parola chiave, si dovrà passare al pulsante "Fornisci aiuto". Quando si esegue questa operazione per la prima volta, verrà chiesto di configurare un account.
-1. Inserire l'indirizzo e-mail.
-1. Controllare l'e-mail per ottenere un codice di verifica, quindi inserirlo in RIM.
-1. Verrà quindi richiesto di inserire il nome, la località e il numero di telefono.
-1. Infine, riceverete un altro codice di verifica sul telefono. Inserite questo codice in RIM.
-    1. Se non avete un telefono cellulare in grado di ricevere messaggi di testo, compilate questo modulo. Vi aiuteremo a verificare il vostro account.
-    1. Una nota per i numeri internazionali: Se il codice di verifica non arriva, assicuratevi che il codice del Paese prima del vostro numero sia indicato con il segno più, anziché con 00.
+## Collegamento tramite link diretto
 
-Ora che avete effettuato l'accesso, inserite la parola chiave che l'obiettivo utilizzerà per collegarsi a voi. Una volta superata la casella di modifica, si troverà una casella di controllo che determina se avviare o meno una conversazione vocale durante la sessione (questa può essere attivata o disattivata anche durante la sessione). Successivamente, si troverà il pulsante "Avvia". Quando si fa clic su questo pulsante, si rimane nella sala d'attesa fino a quando l'obiettivo non si connette. A questo punto, è necessario inviare la parola chiave appena inserita alla persona con cui ci si connetterà, in quanto è quella che utilizzerà per connettersi. Una volta effettuata la connessione, riceverete un avviso che vi informerà che la sessione remota sta per iniziare.  
-<Windows>Prendete nota della scorciatoia **Windows+Maiusc+Backspace** menzionata, perché farà apparire il menu RIM sul vostro computer. Se ci si affida esclusivamente alla tastiera, questo è l'unico modo per riportare l'input da tastiera al proprio sistema.</Windows>
-<MacOS>Osservate la scorciatoia **Opzione+Maiusc+Backspace** menzionata, in quanto essa richiamerà il menu RIM sul vostro computer. Se ci si affida esclusivamente alla tastiera, questo è l'unico modo per reindirizzare l'input da tastiera al proprio sistema.</MacOS>
-Dopo aver chiuso questa finestra di dialogo, verrà avviata la sessione remota.
+Simile a un collegamento alla riunione dalla piattaforma di teleconferenza, Scribe for Meetings offre collegamenti diretti per unirsi alla presentazione accessibile. Se ne ricevete uno nell'invito alla riunione o nella chat della riunione, potete fare clic su di esso per aprire immediatamente Scribe for Meetings nel vostro browser web. Una volta fatto clic sul pulsante "Avvia", può accadere una di queste due cose.
+1. Si sentirà un breve segnale acustico, seguito da un messaggio che informa che Scribe for Meetings si sta preparando a fornire l'accesso ai contenuti della riunione.
+    1. È normale che questa operazione richieda fino a tre minuti, per cui è consigliabile che il presentatore della riunione inizializzi Scribe for Meetings prima di presentare le proprie diapositive.
+    1. Una volta che il Bot Scribe si è unito alla riunione, l'utente riceverà un secondo segnale acustico di avviso seguito da un messaggio che lo avverte.
+1. A volte si può iniziare a sentire l'annuncio del contenuto delle diapositive poco dopo aver fatto clic su "Inizia" Questo può accadere se:
+    1. Non si è il primo partecipante a entrare nella riunione con Scribe for Meetings.
+    1. Si è entrati in riunione in ritardo.
+
+In ogni caso, Scribe for Meetings è pronto per iniziare a presentare le diapositive.
+
+## Partecipazione tramite collegamento alla riunione
+
+Se per qualche motivo non si dispone del collegamento diretto, si può comunque tentare di partecipare tramite un collegamento diretto a Zoom o Teams. Per unirsi tramite il collegamento alla riunione standard:
+1. Visitare Scribe for Meetings.
+1. Inserire l'URL della riunione nella casella di modifica.
+1. Premendo "Vai", si verificherà una delle due cose.
+    1. Se la riunione è registrata, verrà presentata la pagina di benvenuto. È possibile premere il pulsante "Avvia" quando la riunione è pronta.
+    1. Se la riunione non è registrata, viene visualizzata una pagina che consente di effettuare le seguenti operazioni:
+        1. Registrarsi per ricevere una notifica via e-mail quando la riunione viene registrata su Scribe for Meetings.
+        1. Registrare la riunione, come organizzatore o per conto dell'organizzatore.
